# LanFlow

./: README.md  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/lanflow-core/: Cargo.toml
src-tauri/crates/lanflow-core/src/: auth.rs  client.rs  db.rs  discovery.rs  error.rs  fileops.rs  lib.rs  models.rs  server.rs  tasks.rs
src-tauri/crates/lanflow-core/tests/: loopback_transfer.rs
src-tauri/crates/lanflow-protocol/: Cargo.toml  build.rs
src-tauri/crates/lanflow-protocol/proto/: lanflow.proto
src-tauri/crates/lanflow-protocol/src/: error.rs  frame.rs  lib.rs  protocol.rs
src-tauri/src/: commands.rs  core.rs  lib.rs  main.rs
