[package]
name = "lanflow-core"
version = "0.1.0"
edition = "2024"
description = "Tauri-independent LanFlow transfer, authentication and storage core"

[dependencies]
lanflow-protocol = { path = "../lanflow-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
blake3 = { version = "1.8", features = ["rayon", "serde"] }
bytes = "1.12"
chacha20poly1305 = { version = "0.11", features = ["getrandom"] }
filetime = "0.2"
futures-util = { version = "0.3", features = ["sink"] }
hex = "0.4"
hmac = "0.12"
jwalk = "0.8"
machine-uid = "0.6"
mdns-sd = "0.20"
opaque-ke = { version = "4.0", features = ["argon2", "ristretto255"] }
opaque-rand = { package = "rand", version = "0.8", features = ["getrandom"] }
prost = "0.14"
rand = "0.9"
rayon = "1.12"
sha2 = "0.10"
socket2 = { version = "0.6", features = ["all"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rusqlite = { version = "0.7", features = ["bundled"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"
