[package]
name = "lanflow-protocol"
version = "0.1.0"
edition = "2024"
description = "Versioned LanFlow TCP framing and Prost messages"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"

[dependencies]
bytes = "1.12"
prost = "0.14"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "rt"] }
